fix(top): underline of subheading online on small view

--- a/src/css/banner-top.less
+++ b/src/css/banner-top.less
@@ -34,6 +34,9 @@
   margin-top: 5px;
   width: 20%;
   float: left;
+  a {
+    text-decoration: none;
+  }
 }
 
 #dothiv-tb-movement {
@@ -146,5 +149,8 @@
   #dothiv-tb-subheading {
     width: 30%;
     font-size: 12px;
+    a {
+      text-decoration: underline;
+    }
   }
 }
